--- a/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
+++ b/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
@@ -9,18 +9,20 @@ input
 }
 filter {
 
-   if [tags][json] {
-      json {
-        source => "message"
-      }
-    }
-
-  grok {
-    match => [ 
-               "message", 
-               "(?<timestamp>%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME})  %{LOGLEVEL:level} %{NUMBER:pid} --- \[(?<thread>[A-Za-z0-9-]+)\] [A-Za-z0-9.]*\.(?<class>[A-Za-z0-9#_]+)\s*:\s+(?<logmessage>.*)"
-             ]
-   }
+  if [message] =~ "\A\{.+\}\z" {
+        json {
+          source => "message"
+          target => "parsed_json"
+        }
+      mutate {
+          remove_field => [ "json", "message" ]
+        }
+  }
+        mutate {    
+          remove_field => [ "json", "agent" ]
+          remove_field => [ "json", "tags" ]
+          remove_field => [ "json", "thread_name" ]
+        }
 
  }
 output {
