--- a/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
+++ b/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
@@ -12,7 +12,7 @@ filter {
   if [message] =~ "\A\{.+\}\z" {
         json {
           source => "message"
-          target => "parsed_json"
+          target => "httpRequest"
         }
       mutate {
           remove_field => [ "json", "message" ]
