--- a/hosts.yml
+++ b/hosts.yml
@@ -1,4 +1,4 @@
-- name: registry.local
+- name: registry.devops
   ip: 192.168.34.11
   cpus: 1
   mem: 512
@@ -7,7 +7,7 @@
   provisioner: ansible
   playbook: infrastructure/provisioning/registry/playbook.yml
   size: 10GB
-- name: staging.local
+- name: staging.devops
   ip: 192.168.34.12
   cpus: 1
   mem: 1024
@@ -16,7 +16,7 @@
   provisioner: ansible
   playbook: infrastructure/provisioning/staging/playbook.yml
   size: 10GB
-- name: production.local
+- name: production.devops
   ip: 192.168.34.13
   cpus: 1
   mem: 1024
@@ -25,7 +25,7 @@
   provisioner: ansible  
   playbook: infrastructure/provisioning/production/playbook.yml
   size: 10GB
-- name: archiver.local
+- name: archiver.devops
   ip: 192.168.34.14
   cpus: 1
   mem: 256
@@ -34,7 +34,7 @@
   provisioner: ansible  
   playbook: infrastructure/provisioning/archiver/playbook.yml
   size: 10GB
-- name: mail.local
+- name: mail.devops
   ip: 192.168.34.15
   cpus: 1
   mem: 256
@@ -43,16 +43,16 @@
   provisioner: ansible
   playbook: infrastructure/provisioning/mail/playbook.yml
   size: 10GB
-- name: jenkins.local
+- name: jenkins.devops
   ip: 192.168.34.16
   cpus: 2
-  mem: 4096
+  mem: 3072
   os: ubuntu
   docker: not_required
   provisioner: ansible
   playbook: infrastructure/provisioning/jenkins/playbook.yml
   size: 20GB
-- name: elastic.local
+- name: elastic.devops
   ip: 192.168.34.18
   cpus: 1
   mem: 2048
@@ -61,7 +61,7 @@
   provisioner: ansible
   playbook: infrastructure/provisioning/elastic/playbook.yml
   size: 10GB
-- name: logstash.local
+- name: logstash.devops
   ip: 192.168.34.20
   cpus: 1
   mem: 2048
@@ -70,16 +70,16 @@
   provisioner: ansible  
   playbook: infrastructure/provisioning/logstash/playbook.yml
   size: 10GB
-- name: kibana.local
+- name: kibana.devops
   ip: 192.168.34.19
   cpus: 1
-  mem: 2048
+  mem: 1024
   os: ubuntu
   docker: not_required
   provisioner: ansible
   playbook: infrastructure/provisioning/kibana/playbook.yml
   size: 10GB
-- name: vault.local
+- name: vault.devops
   ip: 192.168.34.17
   cpus: 1
   mem: 512
