--- a/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
+++ b/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
@@ -32,7 +32,7 @@ output {
    #    codec => rubydebug
    #   }
     elasticsearch {
-      hosts => ["http://elastic.local:9200"]
+      hosts => ["http://elastic.devops:9200"]
       manage_template => false
       index => "logstash-%{+YYYY.MM.dd}"
    }
