--- a/infrastructure/provisioning/roles/hashicorp-vault/defaults/main.yml
+++ b/infrastructure/provisioning/roles/hashicorp-vault/defaults/main.yml
@@ -4,7 +4,7 @@ vault_version: "1.3.1"
 vault_data_directory: "/opt/vault-data"
 vault_config_directory: "/etc/vault"
 vault_logs_directory: "/logs/vault"
-vault_api_domain: "vault.local"
+vault_api_domain: "vault.devops"
 vault_user: "vault"
 vault_group: "vault"
 vault_checksum: "sha256:b49de8fd508eb9c2c222fa0f38e23546fb28991af2e8bfdb9bbe381a380f9baa"
