--- a/infrastructure/provisioning/kibana/playbook.yml
+++ b/infrastructure/provisioning/kibana/playbook.yml
@@ -8,5 +8,5 @@
     vars:
       kibana_server: 0.0.0.0
       kibana_server_port: 5601
-      elasticsearch_server: "http://elastic.local:9200"
+      elasticsearch_server: "http://elastic.devops:9200"
     become: yes   
