--- a/infrastructure/provisioning/roles/elk-elasticsearch/templates/elasticsearch.yml
+++ b/infrastructure/provisioning/roles/elk-elasticsearch/templates/elasticsearch.yml
@@ -52,7 +52,7 @@ path.logs: /var/log/elasticsearch
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
-network.host: elastic.local
+network.host: elastic.devops
 #
 # Set a custom port for HTTP:
 #
