--- a/infrastructure/provisioning/roles/elk-kibana/templates/kibana.yml
+++ b/infrastructure/provisioning/roles/elk-kibana/templates/kibana.yml
@@ -25,7 +25,7 @@ server.host: 0.0.0.0
 server.name: "kibana"
 
 # The URLs of the Elasticsearch instances to use for all your queries.
-elasticsearch.hosts: ["http://elastic.local:9200"]
+elasticsearch.hosts: ["http://elastic.devops:9200"]
 
 # When this setting's value is true Kibana uses the hostname specified in the server.host
 # setting. When the value of this setting is false, Kibana uses the hostname of the host
