--- a/frontend/nginx-staging.conf
+++ b/frontend/nginx-staging.conf
@@ -9,5 +9,7 @@ server {
     proxy_pass http://staging.devops:8080/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;    
   }
 }
