added load balancer experimentation

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,3 +1,12 @@
+- name: loadbalancer.devops
+  ip: 192.168.34.30
+  cpus: 1
+  mem: 1024
+  os: ubuntu
+  docker: not_required
+  provisioner: shell
+  playbook: infrastructure/provisioning/loadbalancer/script.sh
+  size: 10GB
 - name: registry.devops
   ip: 192.168.34.11
   cpus: 1
