--- a/infrastructure/provisioning/roles/geerlingguy.jenkins/tasks/main.yml
+++ b/infrastructure/provisioning/roles/geerlingguy.jenkins/tasks/main.yml
@@ -62,5 +62,23 @@
     path: "{{ jenkins_home }}/init.groovy.d/basic-security.groovy"
     state: absent
 
+- name: Restart Jenkins to make the plugin data available
+  service: name=jenkins state=restarted
+
+- name: Wait untils Jenkins web API is available.
+  command: >
+    curl -D - --silent --max-time 5 http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix }}/cli/
+  args:
+    warn: false
+  register: result
+  until: >
+    (result.stdout.find("403 Forbidden") != -1)
+    or (result.stdout.find("200 OK") != -1)
+    and (result.stdout.find("Please wait while") == -1)
+  retries: "{{ jenkins_connection_retries }}"
+  delay: "{{ jenkins_connection_delay }}"
+  changed_when: false
+  check_mode: false
+
 # Update Jenkins and install configured plugins.
 - include_tasks: plugins.yml
