--- a/hosts.yml
+++ b/hosts.yml
@@ -1,5 +1,5 @@
 #- name: loadbalancer.devops
-#  ip: 192.168.34.30
+#  ip: 192.168.57.30
 #  cpus: 1
 #  mem: 1024
 #  os: ubuntu
@@ -8,7 +8,7 @@
 #  playbook: infrastructure/provisioning/loadbalancer/script.sh
 #  size: 10GB
 - name: registry.devops
-  ip: 192.168.34.11
+  ip: 192.168.57.11
   cpus: 1
   mem: 512
   os: alpine
@@ -17,7 +17,7 @@
   playbook: infrastructure/provisioning/registry/playbook.yml
   size: 10GB
 - name: staging.devops
-  ip: 192.168.34.12
+  ip: 192.168.57.12
   cpus: 1
   mem: 1024
   os: ubuntu
@@ -26,7 +26,7 @@
   playbook: infrastructure/provisioning/staging/playbook.yml
   size: 10GB
 - name: production.devops
-  ip: 192.168.34.13
+  ip: 192.168.57.13
   cpus: 1
   mem: 1024
   os: ubuntu
@@ -35,7 +35,7 @@
   playbook: infrastructure/provisioning/production/playbook.yml
   size: 10GB
 - name: archiver.devops
-  ip: 192.168.34.14
+  ip: 192.168.57.14
   cpus: 1
   mem: 256
   os: alpine
@@ -43,17 +43,17 @@
   provisioner: ansible  
   playbook: infrastructure/provisioning/archiver/playbook.yml
   size: 10GB
-- name: mail.devops
-  ip: 192.168.34.15
-  cpus: 1
-  mem: 256
-  os: alpine
-  docker: not_required
-  provisioner: ansible
-  playbook: infrastructure/provisioning/mail/playbook.yml
-  size: 10GB
+# - name: mail.devops
+#   ip: 192.168.57.15
+#   cpus: 1
+#   mem: 256
+#   os: alpine
+#   docker: not_required
+#   provisioner: ansible
+#   playbook: infrastructure/provisioning/mail/playbook.yml
+#   size: 10GB
 - name: jenkins.devops
-  ip: 192.168.34.16
+  ip: 192.168.57.16
   cpus: 2
   mem: 3072
   os: ubuntu
@@ -62,7 +62,7 @@
   playbook: infrastructure/provisioning/jenkins/playbook.yml
   size: 20GB
 - name: elastic.devops
-  ip: 192.168.34.18
+  ip: 192.168.57.18
   cpus: 1
   mem: 2048
   os: ubuntu
@@ -71,7 +71,7 @@
   playbook: infrastructure/provisioning/elastic/playbook.yml
   size: 10GB
 - name: logstash.devops
-  ip: 192.168.34.20
+  ip: 192.168.57.20
   cpus: 1
   mem: 2048
   os: ubuntu
@@ -80,7 +80,7 @@
   playbook: infrastructure/provisioning/logstash/playbook.yml
   size: 10GB
 - name: kibana.devops
-  ip: 192.168.34.19
+  ip: 192.168.57.19
   cpus: 1
   mem: 1024
   os: ubuntu
@@ -89,7 +89,7 @@
   playbook: infrastructure/provisioning/kibana/playbook.yml
   size: 10GB
 - name: vault.devops
-  ip: 192.168.34.17
+  ip: 192.168.57.17
   cpus: 1
   mem: 512
   os: ubuntu
